# Recomendae

./: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/src/: bancodados.py  bd.py  crud.py  database.py  login.py  main.py  models.py
backend/src/core/: config.py  events.py
backend/src/core/settings/: app.py  base.py  production.py  test.py
backend/src/db/: database.py  events.py
backend/src/db/queries/: tables.py
backend/src/db/queries/sql/: books.sql  comments.sql
backend/src/db/repositories/: books.py  comments.py  reviews.py  users.py
backend/src/dependencies/: authentication.py  books.py  comments.py  database.py  profiles.py  reviews.py
backend/src/models/domain/: books.py  rating.py  reviews.py  users.py
backend/src/models/schemas/: books.py  reviews.py
backend/src/resources/: strings.py
backend/src/routers/: book.py  user.py
backend/src/routes/: api.py  authentication.py  book.py  comments.py  profiles.py  reviews.py  tags.py  user.py  users.py
backend/src/routes/books/: api.py  books_common.py  books_resource.py
backend/src/services/: books.py  jwt.py  reviews.py  security.py
backend/tests/services/: authentication_test.py  books_test.py  reviews_test.py  security_test.py
config/: .env.ci  .env.dev  .env.prod
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
frontend/public/: index.html  referencia.html  script.js  styles.css
frontend/src/: api.js  app.jsx  index.js
frontend/src/Componentes/: index.css
(+23 files in other folders)
