[tool.poetry]
name = "recomendae-core"
version = "0.0.1"
description = ""
authors = ["Jonathan Bispo <jonathanbispo.pessoal@gmail.com>"]
readme = "README.md"
packages = [{include = "recomendae_core"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.15"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
asyncpg = "^0.27.0"
loguru = "^0.7.0"
aiosql = "^8.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
